--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <main>
         <section class="home">
             <div class="home-text">
-                <h4 class="text-h4">Welcome J'Burguers</h4>
-                <h1 class="text-h1">Different spice for different tastes</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod error veniam in voluptatem magni quisquam</p>
-                <a href="#" class="home-btn">Order yours</a>
+                <h4 class="text-h4">Bem-Vindo a J'Burguers</h4>
+                <h1 class="text-h1">Sabor único e inesquecível.</h1>
+                <p>Na J'Burguers, criamos hambúrgueres artesanais com ingredientes frescos e combinações deliciosas. Temos opções clássicas, especiais e alternativas vegetarianas, tudo em um ambiente descontraído e acolhedor. Aqui, cada mordida é uma experiência única.</p>
+                <a href="#" class="home-btn">Peça já</a>
             </div>
             <div class="home-img">
                 <img src="./img/imagem.png" alt="hamburguer">
